--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="AppCatalog">
   <meta name="author" content="">
   <!--<base href="/"> -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
